    - Always remove DomainKey (and similar) headers (1287546) from messages
      sent to the list.

    - List owners can customize content filter behavior as not to collapse
      multipart/alternative to its first content.  This allows HTML part
      to pass through after other content filtering is done.

  Internationalization

    - New language: Interlingua.

  Bug fixes and other patches

    - Fix Scrubber.py mungs quoted-printable bug with introducing
      'X-Mailman-Scrubbed' header for marking that the payload is
      scrubber-munged.  The flag is referenced in ToDigest.py, ToArchive.py,
      Decorate.py and Archiver.  Similar problem in ToDigest.py where the
      plain digest is generated is also fixed.

    - Fix Syslog.py to write quopri encoded message when it fail to write
      8-bit characters.

    - Fix MTA/Postfix.py to check aliases group permission in check_perms
      and fix mailman-install document on this matter (1378270).

    - Fix private.py to go to the original URL after authorization (1080943).

    - Fix bounce log score messages to be more consistent.

    - Fix bin/remove_members to accept no arguments when both --fromall and
      --file= options are specified.

    - Change cgi-bin and mail wrapper "group not found" error message to be
      more descriptive of the actual problem.

    - Apply the list's ban_list to address changes and admin mass subscribe
      and invite and to confirmations/approvals of address changes,
      subscriptions and invitations.

    - Decode quoted-printable and base64 encoded parts before passing to
      HTML_TO_PLAIN_TEXT_COMMAND (1367783).

    - Remove Approve: header from post - treat as Approved: (1355707).

    - Stop removing line following Approve(d): line in body of post (1318883).

    - Remove Approve(d): <password> from all text/* parts in addition the
      initial text/plain part. It still must be the first non-blank line in